Fix image alignment, distortion

--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,15 @@ img {
 	display: grid;
 	grid-template-columns: auto auto auto;
 }
+
+.pics div {
+	text-align: center;
+}
+
 .pics img {
-	width: 90%;
+	max-width: 90%;
 	height: auto;
-	margin: 20px;
-	background: yellow;
+	margin: 20px auto;
 }
 
 .header {
@@ -204,7 +208,7 @@ a:hover {
 
 .project-image-wrapper img{
 	width: 300px;
-	height: 300px;
+	height: auto;
 }
 
 .hoverstats {
